Partial fix for ProfileChooserView layout performance.

Currently, a Layout is triggered before adding to a Widget. This is
unnecessary since a full layout is done when adding to the Widget
(which may also invalidate any prior layout as well).

Also, when already in a Widget, there's no point doing a Layout()
before SizeToContents() since a size change is also guaranteed to
invalidate the layout.

Finally, provide a hint to the layout manager for the promo text width.
The profile switcher has a fairly complex, nested LayoutManager setup,
which is requiring a second layout pass. This can be avoided by giving
the promo text a width.

Bug: 789118
Change-Id: I01b3e377afdaa0e948b1c6c72d008d6fd901145d
Reviewed-on: https://chromium-review.googlesource.com/799614
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520496}
Former-commit-id: 616c8345fbe447467905b69cee8e4cbde8d29ffa